add Kit loader + embed form

--- a/client/index.html
+++ b/client/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <!-- ── head = page settings ──────────────────────────────── -->
@@ -27,9 +27,6 @@
     ></script>
 
     <!-- ✅ Kit loader – add this ONE line and nothing else here -->
-    <script
-      id="ck-script"
-      src="https://f.convertkit.com/ckjs/ck.5.js"
-    ></script>
+    <script id="ck-script" src="https://f.convertkit.com/ckjs/ck.5.js"></script>
   </body>
 </html>
