fixed the subscription field

--- a/client/index.html
+++ b/client/index.html
@@ -1,32 +1,24 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- ── head = page settings ──────────────────────────────── -->
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1"
     />
     <meta name="google-site-verification" content="bcPfBdT750Ye1g7E" />
-
-    <title>N.K. Mackie</title>
-    <!-- (keep any other <link> or <meta> tags you already have) -->
+    <title>N.K. Mackie — Official Site</title>
+    <!-- keep any extra <link> or <meta> tags you had before here -->
   </head>
 
   <body>
-    <!-- React will render everything inside this div -->
+    <!-- React/Vite mounts the whole site inside this div -->
     <div id="root"></div>
 
-    <!-- Vite/React bundle that starts your site -->
+    <!-- Vite / React bundle -->
     <script type="module" src="/src/main.tsx"></script>
 
-    <!-- Replit’s dev banner (leave it) -->
-    <script
-      type="text/javascript"
-      src="https://replit.com/public/js/replit-dev-banner.js"
-    ></script>
-
-    <!-- ✅ Kit loader – add this ONE line and nothing else here -->
-    <script id="ck-script" src="https://f.convertkit.com/ckjs/ck.5.js"></script>
+    <!-- Replit dev banner (safe to leave) -->
+    <script src="https://replit.com/public/js/replit-dev-banner.js"></script>
   </body>
 </html>
