updated search engine text

--- a/client/index.html
+++ b/client/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,9 +6,15 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1"
     />
+
+    <!-- Google Search Console – main domain -->
     <meta name="google-site-verification" content="bcPfBdT750Ye1g7E" />
+
+    <!-- Google Search Console – redirecting domain -->
+    <meta name="google-site-verification" content="NEW_TOKEN_GOES_HERE" />
+
     <title>N.K. Mackie — Official Site</title>
-    <!-- keep any extra <link> or <meta> tags you had before here -->
+    <!-- (keep any extra <link> or other <meta> tags you had here) -->
   </head>
 
   <body>
@@ -22,3 +28,4 @@
     <script src="https://replit.com/public/js/replit-dev-banner.js"></script>
   </body>
 </html>
+
